PrestaShop address fields mapping, delivery service selection and country mapping issues fixed

--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1203,6 +1203,10 @@
     <Compile Include="Migrations\202012111107472_changed-PalletDispatchId-to-OrderId-in-OrderSchedules-Table.designer.cs">
       <DependentUpon>202012111107472_changed-PalletDispatchId-to-OrderId-in-OrderSchedules-Table.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202012140148047_added-countries-for-TenantDeliveryService-and-PrestashopCountryId-removed-from-GlobalCountry-table.cs" />
+    <Compile Include="Migrations\202012140148047_added-countries-for-TenantDeliveryService-and-PrestashopCountryId-removed-from-GlobalCountry-table.designer.cs">
+      <DependentUpon>202012140148047_added-countries-for-TenantDeliveryService-and-PrestashopCountryId-removed-from-GlobalCountry-table.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -2425,6 +2429,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202012111107472_changed-PalletDispatchId-to-OrderId-in-OrderSchedules-Table.resx">
       <DependentUpon>202012111107472_changed-PalletDispatchId-to-OrderId-in-OrderSchedules-Table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202012140148047_added-countries-for-TenantDeliveryService-and-PrestashopCountryId-removed-from-GlobalCountry-table.resx">
+      <DependentUpon>202012140148047_added-countries-for-TenantDeliveryService-and-PrestashopCountryId-removed-from-GlobalCountry-table.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
