--- a/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
+++ b/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
@@ -202,6 +202,7 @@
     <Compile Include="Domain\Auth\Module.cs" />
     <Compile Include="Domain\Feedback\Feedback.cs" />
     <Compile Include="Domain\ImportModels\DeliverectModels.cs" />
+    <Compile Include="Domain\Models\AdyenOrderPaylink.cs" />
     <Compile Include="Domain\Models\ProductLocationStocks.cs" />
     <Compile Include="Domain\Shifts\ShiftSchedule.cs" />
     <Compile Include="Domain\ImportModels\ParentChildProductsAssociationsImportModel.cs" />
@@ -242,6 +243,7 @@
     <Compile Include="Domain\Models\ProductManufacturer.cs" />
     <Compile Include="Domain\Models\UISettingItem.cs" />
     <Compile Include="Domain\Models\UISetting.cs" />
+    <Compile Include="Domain\ViewModels\AdyenPayments\AdyenPaylinkPaymentNotificationModel.cs" />
     <Compile Include="Domain\ViewModels\AdyenPayments\CreatePayLinkRequestViewModel.cs" />
     <Compile Include="Domain\ViewModels\ApiModels\ProductLocationStocksSync.cs" />
     <Compile Include="Domain\ViewModels\ProductPriceViewModel.cs" />
