--- a/WarehouseEcommerce/Web.config
+++ b/WarehouseEcommerce/Web.config
@@ -18,7 +18,7 @@
   <connectionStrings>
     <!--Connection strings for Development Laptop-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP2;Initial Catalog=LinkV1.2873;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True"/>-->
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=.\sql16;Initial Catalog=GaneDataV1.2852;User ID=pharmix;Password=Pharmix123#;Integrated Security=False;MultipleActiveResultSets=True" />
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=PHARMIXSERVER;Initial Catalog=IceStoneOrderingV1.2874;User ID=pharmix;Password=Pharmix123#;Integrated Security=False;MultipleActiveResultSets=True" />
     <!--Connection strings for Development PC-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC2;Initial Catalog=GanedataV1.2852;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True"/>-->
     <!--Connection strings for Sattar Laptop-->
