--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1224,6 +1224,9 @@
       <DependentUpon>202101020032229_DeliverectCategoryId-and-SortOrder-added.cs</DependentUpon>
     </Compile>
     <Compile Include="MyDbConfiguration.cs" />
+    <Compile Include="Migrations\202012221907499_AddedAdyenMetaData.cs" />
+    <Compile Include="Migrations\202012221907499_AddedAdyenMetaData.designer.cs">
+      <DependentUpon>202012221907499_AddedAdyenMetaData.cs</DependentUpon>
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
     <Compile Include="IDbContext.cs" />
@@ -2462,6 +2465,10 @@
       <DependentUpon>202101020032229_DeliverectCategoryId-and-SortOrder-added.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202012221907499_AddedAdyenMetaData.resx">
+      <DependentUpon>202012221907499_AddedAdyenMetaData.cs</DependentUpon>
   <ItemGroup>
     <Folder Include="Scripts\" />
   </ItemGroup>
