Forgot password changes for warehouse zone with API to achieve same

--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1219,6 +1219,10 @@
     <Compile Include="Migrations\202012221907499_AddedAdyenMetaData.designer.cs">
       <DependentUpon>202012221907499_AddedAdyenMetaData.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202012251414441_AddedResetPasswordFields.cs" />
+    <Compile Include="Migrations\202012251414441_AddedResetPasswordFields.designer.cs">
+      <DependentUpon>202012251414441_AddedResetPasswordFields.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -2453,6 +2457,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202012221907499_AddedAdyenMetaData.resx">
       <DependentUpon>202012221907499_AddedAdyenMetaData.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202012251414441_AddedResetPasswordFields.resx">
+      <DependentUpon>202012251414441_AddedResetPasswordFields.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
