--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -57,7 +57,7 @@
     <!--connection strings for Development Laptop-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP2;Initial Catalog=BecscoLiveV1.3000;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />-->
     <!--connection strings for Sattar Laptop-->
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=.\sql16;Initial Catalog=GaneDataV1;User ID=pharmix;Password=Pharmix123#;Integrated Security=False;MultipleActiveResultSets=True" />
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=.\sql16;Initial Catalog=GaneDataV1.2852;User ID=pharmix;Password=Pharmix123#;Integrated Security=False;MultipleActiveResultSets=True" />
     <!--connection strings for Development PC-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC2;Initial Catalog=IceStoneOrderingV1.2874;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />-->
     <!--connection strings for Naveed PC-->
@@ -513,6 +513,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.ComponentModel.Annotations" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="WebMatrix.Data" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
