--- a/WMS/packages.config
+++ b/WMS/packages.config
@@ -35,6 +35,8 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.3" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.Data.Edm" version="5.8.4" targetFramework="net472" />
