--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -1475,6 +1475,10 @@
     <Content Include="Views\Theme\University\Orders\Payments\_OrderProgressBar.cshtml" />
     <Content Include="Views\Theme\University\Orders\Payments\_CartItems.cshtml" />
     <Content Include="Views\Theme\University\Orders\Payments\_AddressForm.cshtml" />
+    <Content Include="Views\Theme\University\User\ForgotPassword.cshtml" />
+    <Content Include="Views\Theme\University\User\ForgotPasswordConfirmation.cshtml" />
+    <Content Include="Views\Theme\University\User\ResetPassword.cshtml" />
+    <Content Include="Views\Theme\University\User\ResetPasswordConfirmation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
