--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1223,6 +1223,10 @@
     <Compile Include="Migrations\202012251414441_AddedResetPasswordFields.designer.cs">
       <DependentUpon>202012251414441_AddedResetPasswordFields.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202012262013058_EntityUpdatesDeliveryCharges.cs" />
+    <Compile Include="Migrations\202012262013058_EntityUpdatesDeliveryCharges.designer.cs">
+      <DependentUpon>202012262013058_EntityUpdatesDeliveryCharges.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -2460,6 +2464,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202012251414441_AddedResetPasswordFields.resx">
       <DependentUpon>202012251414441_AddedResetPasswordFields.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202012262013058_EntityUpdatesDeliveryCharges.resx">
+      <DependentUpon>202012262013058_EntityUpdatesDeliveryCharges.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
