--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1231,6 +1231,10 @@
     <Compile Include="Migrations\202101011302365_AccountBillingAndDeliveryAddressInfo.designer.cs">
       <DependentUpon>202101011302365_AccountBillingAndDeliveryAddressInfo.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101021600220_AddedForeignKeysForAccountAddresses.cs" />
+    <Compile Include="Migrations\202101021600220_AddedForeignKeysForAccountAddresses.designer.cs">
+      <DependentUpon>202101021600220_AddedForeignKeysForAccountAddresses.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -2474,6 +2478,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202101011302365_AccountBillingAndDeliveryAddressInfo.resx">
       <DependentUpon>202101011302365_AccountBillingAndDeliveryAddressInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101021600220_AddedForeignKeysForAccountAddresses.resx">
+      <DependentUpon>202101021600220_AddedForeignKeysForAccountAddresses.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
