--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -57,7 +57,7 @@
     <!--connection strings for Development Laptop-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP2;Initial Catalog=BecscoLiveV1.3000;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />-->
     <!--connection strings for Sattar Laptop-->
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=.\sql16;Initial Catalog=GaneDataV1;User ID=pharmix;Password=Pharmix123#;Integrated Security=False;MultipleActiveResultSets=True" />
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=LAPTOP-R0BRRUC;Initial Catalog=TestIceStoneOrderingV1.2874;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />
     <!--connection strings for Development PC-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC2;Initial Catalog=IceStoneOrderingV1.2874;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />-->
     <!--connection strings for Naveed PC-->
@@ -77,7 +77,7 @@
     <add key="VideoFormats" value=".avi,.mp4" />
     <add key="ImageFormats" value=".jpeg,.png,.gif,.bmp,.jpg" />
     <add key="DocumentFormats" value=".pdf,.docx,.xlxs,.txt" />
-    <add key="WarehouseStoreBaseUri" value="http://localhost:16257/" />
+    <add key="WarehouseStoreBaseUri" value="http://192.168.1.17:8005/" />
     <add key="WarehouseSyncSiteID" value="1" />
     <add key="WarehouseSyncIntervalSeconds" value="60" />
     <add key="WarehouseScheduleMarginHours" value="2" />
@@ -106,10 +106,10 @@
     <add key="MerakiSecretKey" value="1d9399b50f91cf1672d709744e3d70b93083eb04" />
     <add key="SMSBroadcastUser" value="Ganedata01" />
     <add key="SMSBroadcastPassword" value="92DqXS3tfh" />
-	<add key="DeliverectApiUrl" value="https://api.staging.deliverect.com" />
-	<add key="DeliverectClientId" value="TbCfZobd7Dbh3RAD" />
-	<add key="DeliverectClientSecretKey" value="pmNHmyaCxdatNiCOeT7PsRFsTZNxjCtk" />
-	<add key="DeliverectScope" value="ganedata" />
+    <add key="DeliverectApiUrl" value="https://api.staging.deliverect.com" />
+    <add key="DeliverectClientId" value="TbCfZobd7Dbh3RAD" />
+    <add key="DeliverectClientSecretKey" value="pmNHmyaCxdatNiCOeT7PsRFsTZNxjCtk" />
+    <add key="DeliverectScope" value="ganedata" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -122,7 +122,7 @@
     <!--Start session string Development-Laptop-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEV-LAPTOP2;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" timeout="300" />-->
     <!--Start session string Sattar-Laptop-->
-    <sessionState mode="SQLServer" sqlConnectionString="Data Source=.\sql16;User ID=pharmix;Password=Pharmix123#;Integrated Security=False;MultipleActiveResultSets=True" timeout="300" />
+    <sessionState mode="SQLServer" sqlConnectionString="Data Source=LAPTOP-R0BRRUC;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" timeout="300" />
     <!--Start session string Naveed PC-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-H9GO0QC\SQLSERVER2019;Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;" timeout="300" />-->
     <!--Start session string UMER PC-->
