--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -58,7 +58,7 @@
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP2;Initial Catalog=BecscoLiveV1.3000;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />-->
     <!--connection strings for Sattar Laptop-->
 
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=LAPTOP-R0BRRUC;Initial Catalog=TestIceStoneOrderingV1.2874;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=.\sql16;Initial Catalog=IceStoneOrderingR1_V1;Integrated Security=True;MultipleActiveResultSets=True" />
     <!--connection strings for Development PC-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC2;Initial Catalog=IceStoneOrderingV1.2874;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />-->
     <!--connection strings for Naveed PC-->
