--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1231,6 +1231,14 @@
     <Compile Include="Migrations\202101131614172_ShoppingVoucherAndUsageModels.designer.cs">
       <DependentUpon>202101131614172_ShoppingVoucherAndUsageModels.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101140949019_ShoppingVouchersForMultiUsage.cs" />
+    <Compile Include="Migrations\202101140949019_ShoppingVouchersForMultiUsage.designer.cs">
+      <DependentUpon>202101140949019_ShoppingVouchersForMultiUsage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202101141307318_OrderDeliveryChargesForAudit.cs" />
+    <Compile Include="Migrations\202101141307318_OrderDeliveryChargesForAudit.designer.cs">
+      <DependentUpon>202101141307318_OrderDeliveryChargesForAudit.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
@@ -2475,6 +2483,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202101131614172_ShoppingVoucherAndUsageModels.resx">
       <DependentUpon>202101131614172_ShoppingVoucherAndUsageModels.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101140949019_ShoppingVouchersForMultiUsage.resx">
+      <DependentUpon>202101140949019_ShoppingVouchersForMultiUsage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101141307318_OrderDeliveryChargesForAudit.resx">
+      <DependentUpon>202101141307318_OrderDeliveryChargesForAudit.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
