--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1243,6 +1243,10 @@
     <Compile Include="Migrations\202101201251526_AddedAccountRewardPointKeys.designer.cs">
       <DependentUpon>202101201251526_AddedAccountRewardPointKeys.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101251239456_AddedRefundRequestDetails.cs" />
+    <Compile Include="Migrations\202101251239456_AddedRefundRequestDetails.designer.cs">
+      <DependentUpon>202101251239456_AddedRefundRequestDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
@@ -2496,6 +2500,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202101201251526_AddedAccountRewardPointKeys.resx">
       <DependentUpon>202101201251526_AddedAccountRewardPointKeys.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101251239456_AddedRefundRequestDetails.resx">
+      <DependentUpon>202101251239456_AddedRefundRequestDetails.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
