--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -326,6 +326,7 @@
     <compression enableHtmlCompression="true" enableCallbackCompression="true" enableResourceCompression="true" enableResourceMerging="true" />
     <settings doctypeMode="Xhtml" rightToLeft="false" embedRequiredClientLibraries="false" checkReferencesToExternalScripts="true" accessibilityCompliant="false" />
     <errors callbackErrorRedirectUrl="~/error" />
+    <resources></resources>
   </devExpress>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
