--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1271,6 +1271,10 @@
     <Compile Include="Migrations\202102151249464_UpdatedRewardTriggers.designer.cs">
       <DependentUpon>202102151249464_UpdatedRewardTriggers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202102231305160_AddedInventoryChangesToTransactions.cs" />
+    <Compile Include="Migrations\202102231305160_AddedInventoryChangesToTransactions.designer.cs">
+      <DependentUpon>202102231305160_AddedInventoryChangesToTransactions.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
@@ -2545,6 +2549,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202102151249464_UpdatedRewardTriggers.resx">
       <DependentUpon>202102151249464_UpdatedRewardTriggers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102231305160_AddedInventoryChangesToTransactions.resx">
+      <DependentUpon>202102231305160_AddedInventoryChangesToTransactions.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
