Refactored allocation details, investigated with Becsco db and started working on issues around Transaction types

--- a/GaneEcommerce.Services/Ganedata.Core.Services.csproj
+++ b/GaneEcommerce.Services/Ganedata.Core.Services.csproj
@@ -365,6 +365,7 @@
     <Compile Include="Core\Barcoding\GS128Decoder.cs" />
     <Compile Include="Core\Finance\Financials.cs" />
     <Compile Include="Core\Inventory\Inventory.cs" />
+    <Compile Include="Core\Inventory\InventoryExtensions.cs" />
     <Compile Include="Deliverect\IDeliverectSyncService.cs" />
     <Compile Include="Deliverect\DeliverectSyncService.cs" />
     <Compile Include="Emails\EmailServices.cs" />
